# os-camtroller

./: CMakeLists.txt  README.md
msvc/os-camtroller/: os-camtroller.sln  os-camtroller.vcxproj
msvc/os-camtroller/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  os-camtroller.ilk  os-camtroller.lastbuildstate  vc110.idb
src/: main.cpp  main_old.cpp
